[gd_scene load_steps=6 format=3 uid="uid://dvb1p7xknwxfo"]

[ext_resource type="Texture2D" uid="uid://git38kn27621" path="res://assets/tamagotchi background.jpeg" id="1_hvdd1"]
[ext_resource type="Script" uid="uid://02ehoaqd2ash" path="res://scripts/wardrobe_picker.gd" id="1_nflq1"]
[ext_resource type="Texture2D" uid="uid://dbxnnh61veom3" path="res://assets/buttons/IMG_4211.PNG" id="2_nflq1"]
[ext_resource type="Texture2D" uid="uid://vmdb124odbt3" path="res://assets/wardrobe/shirt/shirt.png" id="4_hvdd1"]
[ext_resource type="Texture2D" uid="uid://b6pbyjt42ev51" path="res://assets/wardrobe.png" id="4_uswlu"]

[node name="wardrobe_picker" type="Node2D"]
script = ExtResource("1_nflq1")

[node name="MainBG" type="Sprite2D" parent="."]
position = Vector2(-296, 0)
scale = Vector2(1.739, 1.739)
texture = ExtResource("1_hvdd1")
centered = false

[node name="Wardrobe" type="Sprite2D" parent="MainBG"]
position = Vector2(377.2283, 391.02933)
scale = Vector2(0.4025302, 0.4025302)
texture = ExtResource("4_uswlu")

[node name="Control" type="Control" parent="MainBG/Wardrobe"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -768.0
offset_right = -512.0
offset_bottom = -768.0
grow_horizontal = 2
grow_vertical = 2

[node name="left" type="VBoxContainer" parent="MainBG/Wardrobe/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22098215
anchor_top = 0.254
anchor_right = 0.344
anchor_bottom = 0.619
offset_top = 0.7131653
offset_right = -0.25601196
offset_bottom = 0.07312012
metadata/_edit_use_anchors_ = true

[node name="item1" type="TextureRect" parent="MainBG/Wardrobe/Control/left"]
layout_mode = 2
texture = ExtResource("4_hvdd1")
expand_mode = 4

[node name="right" type="VBoxContainer" parent="MainBG/Wardrobe/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65625
anchor_top = 0.254
anchor_right = 0.77900004
anchor_bottom = 0.619
offset_top = 0.7131653
offset_right = 0.018249512
offset_bottom = 0.07312012
metadata/_edit_use_anchors_ = true

[node name="item1" type="TextureRect" parent="MainBG/Wardrobe/Control/right"]
layout_mode = 2
texture = ExtResource("4_hvdd1")
expand_mode = 4

[node name="middle" type="HBoxContainer" parent="MainBG/Wardrobe/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.252
anchor_right = 0.624
anchor_bottom = 0.333
offset_left = 0.45254517
offset_top = -0.50061035
offset_right = 0.16680908
offset_bottom = -0.6308899

[node name="item1" type="TextureRect" parent="MainBG/Wardrobe/Control/middle"]
layout_mode = 2
texture = ExtResource("4_hvdd1")
expand_mode = 2

[node name="middle2" type="HBoxContainer" parent="MainBG/Wardrobe/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.53300005
anchor_right = 0.624
anchor_bottom = 0.61300004
offset_left = 0.45254517
offset_top = -0.68811035
offset_right = 0.16680908
offset_bottom = 0.71765137

[node name="item1" type="TextureRect" parent="MainBG/Wardrobe/Control/middle2"]
layout_mode = 2
texture = ExtResource("4_hvdd1")
expand_mode = 2

[node name="Control" type="Control" parent="MainBG"]
layout_mode = 3
anchor_left = 0.231
anchor_right = 0.794
anchor_bottom = 1.0
offset_left = 0.19676208
offset_right = -0.14019775
offset_bottom = 0.05517578
grow_horizontal = 2
grow_vertical = 2

[node name="back" type="TextureButton" parent="MainBG/Control"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7777778
anchor_top = 0.8687499
anchor_right = 0.95600015
anchor_bottom = 0.96825
offset_right = -0.32006836
offset_bottom = 0.6398926
texture_normal = ExtResource("2_nflq1")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="prev" type="TextureButton" parent="MainBG/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19444449
anchor_top = 0.19531256
anchor_right = 0.3726668
anchor_bottom = 0.29481262
offset_right = -0.32006836
offset_bottom = 0.6398926
texture_normal = ExtResource("2_nflq1")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="next" type="TextureButton" parent="MainBG/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6166667
anchor_top = 0.1953125
anchor_right = 0.794889
anchor_bottom = 0.29481256
offset_right = -0.32006836
offset_bottom = 0.6398926
texture_normal = ExtResource("2_nflq1")
ignore_texture_size = true
stretch_mode = 4
flip_h = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MainBG/Control/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainBG/Control/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="MainBG/Control/next" to="." method="_on_next_pressed"]
